-（修复）将Forge模组字节码兼容Java17